[package]
authors = ["Zeyla Hellyer <zey@zey.moe>"]
description = "Serenity ecosystem oauth support for the Discord API."
documentation = "https://docs.rs/serenity-oauth"
homepage = "https://github.com/serenity-rs/oauth"
keywords = ["discord", "oauth", "serenity"]
license = "ISC"
name = "serenity-oauth"
readme = "README.md"
repository = "https://github.com/serenity-rs/oauth.git"
version = "0.1.0"

[dependencies]
hyper = "~0.10"
percent-encoding = "^1.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_urlencoded = "~0.5"
serenity-model = { git = "https://github.com/serenity-rs/model" }

[dev-dependencies]
hyper = "~0.10"
hyper-native-tls = "~0.2"
rocket = "~0.3"
rocket_codegen = "~0.3"
