[package]
authors = ["Zeyla Hellyer <zey@zey.moe>"]
description = "Serenity ecosystem oauth support for the Discord API."
documentation = "https://docs.rs/serenity-oauth"
homepage = "https://github.com/serenity-rs/oauth"
keywords = ["discord", "oauth", "serenity"]
license = "ISC"
name = "serenity-oauth"
readme = "README.md"
repository = "https://github.com/serenity-rs/oauth.git"
version = "0.1.0"
edition = "2018"

[dependencies]
hyper = "~0.10"
percent-encoding = "^1.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_urlencoded = "~0.5"
reqwest = { version = "~0.11", features = ["tokio-native-tls", "blocking"] }
async-trait = "^0.1"

[dependencies.serenity]
version = "0.10.2"
#default-features = false
#features = ["tokio"]

[dev-dependencies]
rocket = "~0.4"
rocket_codegen = "~0.4"
reqwest = "~0.11"
